# engrams-cli

./: .gitignore  AGENTS.md  Cargo.toml  README.md  rust-developer-persona.md
.github/workflows/: publish.yml  release.yml
Formula/: engrams.rb
docs/: PROPOSED_FEATURES.md  astro.config.mjs  package-lock.json  package.json
docs/.astro/: settings.json
docs/public/: CNAME  install
docs/src/: env.d.ts
docs/src/components/: Header.astro  Sidebar.astro
docs/src/layouts/: DocsLayout.astro
docs/src/pages/: 404.astro  index.astro
docs/src/styles/: global.css
engrams/: context.db
engrams_export/: active_context.md  manifest.json  product_context.md
engrams_export/anchors/: 1.md  2.md  3.md  4.md  5.md  6.md
engrams_export/decisions/: 1.md  10.md  11.md  12.md  13.md  14.md  15.md  16.md  17.md  18.md  19.md  2.md  20.md  3.md  4.md  5.md  6.md  7.md  8.md  9.md
engrams_export/links/: 1.md  2.md  3.md  4.md  4094.md  4095.md  4096.md  5.md  6.md  7.md  8.md  9.md
engrams_export/patterns/: 1.md  2.md
engrams_export/progress/: 1.md  10.md  11.md  12.md  13.md  14.md  15.md  16.md  17.md  18.md  19.md  2.md  20.md  21.md  22.md  23.md  24.md  25.md  26.md  27.md  28.md  29.md  3.md  30.md  31.md  32.md  4.md  5.md  6.md  7.md  8.md  9.md
src/: cli.rs  db.rs  main.rs  models.rs  output.rs  release.rs  schema.rs
src/assets/: instructions.md
src/ops/: activity.rs  anchor.rs  batch.rs  context.rs  custom.rs  decision.rs  doctor.rs  git.rs  link.rs  mod.rs  pattern.rs  pr.rs  prime.rs  progress.rs  query.rs  report.rs
tests/: cli.rs
(+46 files in other folders)
